# Smart-Attendance

./: .cproject  .gitignore  .project  CMakeLists.txt  ESP-IDF.txt  PostgreSQL.txt  README.md  Things to double-check or improve.txt  continuous_scanm.ino  sdkconfig  sdkconfig.old
RFID-Based-Attendance/RFID-Based-Attendance-System-with-Google-Sheet-main/: Spreadsheet Code.txt
RFID-Based-Attendance/RFID-Based-Attendance-System-with-Google-Sheet-main/main_code/: main_code.ino
components/UHF-driver/: CMakeLists.txt  Kconfig
components/UHF-driver/include/: 903driver.h  910driver.h  common.h  driver.h  dtypes.h  platform.h
components/UHF-driver/src/: 903driver.cpp  910driver.cpp  common.cpp  driver.cpp  hal-serial.cpp  main.cpp
main/: CMakeLists.txt  Kconfig.projbuild  config.h  http_client.cpp  http_client.h  idf_component.yml  main.cpp  wifi_manager.cpp
presentation/: README.md  index.html
rc522-attendance/: CMakeLists.txt  sdkconfig
rc522-attendance/components/rc522-driver/: CMakeLists.txt  Kconfig
rc522-attendance/components/rc522-driver/include/: rc522.h
rc522-attendance/components/rc522-driver/src/: rc522.c
rc522-attendance/main/: CMakeLists.txt  config.h  http_client.cpp  http_client.h  main.cpp  wifi_manager.cpp  wifi_manager.h
server/: .env.example  .gitignore  README.md  app.py  config.py  models.py  requirements.txt  routes.py  seed_demo_epcs.py
server/database/: clear_db.py  init_db.py  migrate_tag_type.py
server/services/: sms_service.py  whatsapp_service.py
